Mon Jul 17 05:52:33 USMST 2006  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcpDataLink.cpp:
        
          Fixed a bug that the length of data message block is not
          written to the sample header. This would cause the publisher
          side not deliver the graceful disconnect messages even though
          it received the message from subscriber.
          
        * tests/transport/simple_bp/PubDriver.cpp:

          Removed a logging message.

Mon Jul 17 04:34:47 UTC 2006  Yan Dai  <dai_y@ociweb.com>

        * DevGuideExamples/DDS/Messenger/pub.ini:
          
          Updated comments for thread_per_connection.
          
        * tests/transport/dds_comparative/PubDriver.cpp:
        * tests/transport/simple/PubDriver.cpp:
        * tests/transport/simple_bp/PubDriver.cpp:
        * tests/transport/simple_bp_rm/PubDriver.cpp:
        * tests/transport/simple_n/PubDriver.cpp:
        * tests/transport/udp_simple/PubDriver.cpp:
        * tests/transport/udp_simple_n/PubDriver.cpp:

          Added sleep after simulated publisher is initialized so it can wait
          for fully association establishment and then start sending samples.

Fri Jul 14 20:04:19 UTC 2006  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcpTransport.h:
    
          Removed the SimpleTcpConnection.h include to fix the circular dependency
          problem on gcc 3.3.3 builds.

Fri Jul 14 12:43:04 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * dds/DCPS/transport/simpleTCP/SimpleTcpAcceptor.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpConnectionReplaceTask.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpDataLink.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpFactory.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpReceiveStrategy.h:
        * dds/DCPS/transport/simpleTCP/SimpleTcpReceiveStrategy.inl: